# FireLink

./: Cargo.toml
src/: main.rs  types.rs  user_types.rs
src/config/: fire_link_config.rs  mod.rs  tests.rs
src/firebase/: auth.rs  config.rs  mod.rs  storage.rs  tests.rs
src/utils/: files.rs  input.rs  logs.rs  mod.rs
