[package]
name = "fire_link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firebase-rs = "2.0.5"
serde = "1.0.147"
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
dialoguer = "0.11.0"
dirs = "5.0.1"
log = "0.4"
fern = "0.6"
